apps/kubernetes-dashboard/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingress-route
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`kube.taehoonlee.dev`)
    services:
      - name: kubernetes-dashboard-kong-proxy
        port: 443
        scheme: https
        serversTransport: kubernetes-dashboard-servers-transport
