apps/kubernetes-dashboard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingressroute
  namespace: kubernetes-dashboard

spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`kube.taehoonlee.dev`)
    services:
      - name: kubernetes-dashboard-kong-proxy
        port: 443
        scheme: https
